--- a/gradle.properties
+++ b/gradle.properties
@@ -21,10 +21,11 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+android.injected.androidTest.leaveApksInstalledAfterRun=true
 # Gradle
 org.gradle.caching=true
 org.gradle.configureondemand=true
 org.gradle.configuration-cache=true
 # Version
-versionName=3.2-alpha03
+versionName=3.2-alpha04
 versionCode=29
