[refactor] Refactor some UI components

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -93,7 +93,8 @@ coil-gif = { module = "io.coil-kt.coil3:coil-gif", version.ref = "coil" }
 coil-svg = { module = "io.coil-kt.coil3:coil-svg", version.ref = "coil" }
 coil-video = { module = "io.coil-kt.coil3:coil-video", version.ref = "coil" }
 
-settings = { module = "io.github.skyd666:settings", version = "1.0-beta03" }
+skyd666-settings = { module = "io.github.skyd666:settings", version = "1.0-beta03" }
+skyd666-compone = { module = "io.github.skyd666:compone", version = "1.0-beta03" }
 
 compottie = { module = "io.github.alexzhirkevich:compottie", version = "2.0.0-rc04" }
 
