--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 adaptive = "1.1.0-beta02"
 androidx-lifecycle = "2.8.4"
 coil = "3.2.0-rc02"
-androidxTest = "1.2.1"
+androidxTest = "1.3.0"
 filekit = "0.10.0-beta03"
 xmlutil = "0.91.0"
 koin = "4.0.4"
@@ -12,9 +12,9 @@ coroutines = "1.10.2"
 paging = "3.3.6"
 rome = "2.1.0"
 room = "2.7.2"
-compose = "1.9.0-beta01"
+compose = "1.9.0-rc01"
 tracingPerfetto = "1.0.0"
-worker = "2.10.2"
+worker = "2.10.3"
 kotlin = "2.2.0-RC3"
 kotlinxAtomicfu = "0.27.0"
 kotlinxSerialization = "1.8.0"
@@ -27,7 +27,7 @@ androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.16.0" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.1" }
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version = "1.10.1" }
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.1.1" }
-androidx-graphics-shapes = { module = "androidx.graphics:graphics-shapes", version = "1.1.0-alpha01" }
+androidx-graphics-shapes = { module = "androidx.graphics:graphics-shapes", version = "1.1.0-beta01" }
 androidx-media = { module = "androidx.media:media", version = "1.7.0" }
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
@@ -114,12 +114,12 @@ androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTe
 androidx-junit-ktx = { module = "androidx.test.ext:junit-ktx", version.ref = "androidxTest" }
 mockito-core = { module = "org.mockito:mockito-core", version = "5.14.2" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "5.4.0" }
-androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.6.1" }
+androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.7.0" }
 androidx-uiautomator = { module = "androidx.test.uiautomator:uiautomator", version = "2.3.0" }
 androidx-benchmark-macro-junit4 = { module = "androidx.benchmark:benchmark-macro-junit4", version = "1.2.0" }
 androidx-paging-test = { module = "androidx.paging:paging-testing", version.ref = "paging" }
 androidx-work-test = { module = "androidx.work:work-testing", version.ref = "worker" }
-androidx-test-rules = { module = "androidx.test:rules", version = "1.6.1" }
+androidx-test-rules = { module = "androidx.test:rules", version = "1.7.0" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 symbol-processing-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
