--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-adaptive = "1.1.0-beta02"
-androidx-lifecycle = "2.8.4"
-coil = "3.2.0-rc02"
+adaptive = "1.1.2"
+androidx-lifecycle = "2.9.1"
+coil = "3.3.0"
 androidxTest = "1.3.0"
-filekit = "0.10.0-beta03"
-xmlutil = "0.91.0"
-koin = "4.0.4"
-ksoup = "0.2.2"
+filekit = "0.10.0"
+xmlutil = "0.91.2"
+koin = "4.1.0"
+ksoup = "0.2.4"
 libtorrent4j = "2.1.0-35"
 coroutines = "1.10.2"
 paging = "3.3.6"
@@ -15,11 +15,11 @@ room = "2.7.2"
 compose = "1.9.0-rc01"
 tracingPerfetto = "1.0.0"
 worker = "2.10.3"
-kotlin = "2.2.0-RC3"
-kotlinxAtomicfu = "0.27.0"
-kotlinxSerialization = "1.8.0"
-ksp = "2.2.0-RC3-2.0.2"
-ktor = "3.1.2"
+kotlin = "2.2.0"
+kotlinxAtomicfu = "0.29.0"
+kotlinxSerialization = "1.9.0"
+ksp = "2.2.0-2.0.2"
+ktor = "3.2.3"
 agp = "8.10.1"
 
 [libraries]
@@ -32,16 +32,16 @@ androidx-media = { module = "androidx.media:media", version = "1.7.0" }
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version = "2.9.0-beta01" }
+jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version = "2.9.0-beta04" }
 jetbrains-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 jetbrains-lifecycle-runtime-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 androidx-compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-tracing", version = "1.8.3" }
 compose-material-icons = { module = "org.jetbrains.compose.material:material-icons-extended", version = "1.7.3" }
-jetbrains-compose-window-size = { module = "org.jetbrains.compose.material3:material3-window-size-class", version = "1.7.3" }
+jetbrains-compose-window-size = { module = "org.jetbrains.compose.material3:material3-window-size-class", version = "1.8.2" }
 jetbrains-compose-adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "adaptive" }
 jetbrains-compose-adaptive-layout = { module = "org.jetbrains.compose.material3.adaptive:adaptive-layout", version.ref = "adaptive" }
 jetbrains-compose-adaptive-navigation = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation", version.ref = "adaptive" }
-jetbrains-compose-ui-backhandler = { module = "org.jetbrains.compose.ui:ui-backhandler", version = "1.8.1" }
+jetbrains-compose-ui-backhandler = { module = "org.jetbrains.compose.ui:ui-backhandler", version = "1.8.2" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
@@ -56,20 +56,20 @@ androidx-paging-common = { module = "androidx.paging:paging-common", version.ref
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "paging" }
 androidx-profileinstaller = { module = "androidx.profileinstaller:profileinstaller", version = "1.4.1" }
 
-kermit = { module = "co.touchlab:kermit", version = "2.0.5" }
+kermit = { module = "co.touchlab:kermit", version = "2.0.6" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
 koin-compose-viewmodel-navigation = { module = "io.insert-koin:koin-compose-viewmodel-navigation", version.ref = "koin" }
 android-material = { module = "com.google.android.material:material", version = "1.12.0" }
-kotlin-codepoints-deluxe = { module = "de.cketti.unicode:kotlin-codepoints-deluxe", version = "0.9.0" }
+kotlin-codepoints-deluxe = { module = "de.cketti.unicode:kotlin-codepoints-deluxe", version = "0.11.0" }
 ksoup = { module = "com.fleeksoft.ksoup:ksoup", version.ref = "ksoup" }
-material-kolor = { module = "com.materialkolor:material-kolor", version = "2.0.0" }
-accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version = "0.37.0" }
+material-kolor = { module = "com.materialkolor:material-kolor", version = "3.0.1" }
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version = "0.37.3" }
 
-compose-material3 = { module = "androidx.compose.material3:material3", version = "1.4.0-alpha16" }
-retrofit2 = { module = "com.squareup.retrofit2:retrofit", version = "2.11.0" }
+compose-material3 = { module = "androidx.compose.material3:material3", version = "1.5.0-alpha01" }
+retrofit2 = { module = "com.squareup.retrofit2:retrofit", version = "3.0.0" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
@@ -102,7 +102,7 @@ compottie = { module = "io.github.alexzhirkevich:compottie", version = "2.0.0-rc
 rome = { module = "com.rometools:rome", version.ref = "rome" }
 rome-modules = { module = "com.rometools:rome-modules", version.ref = "rome" }
 
-reorderable = { module = "sh.calvin.reorderable:reorderable", version = "2.4.3" }
+reorderable = { module = "sh.calvin.reorderable:reorderable", version = "2.5.1" }
 
 libtorrent4j-arm64 = { module = "org.libtorrent4j:libtorrent4j-android-arm64", version.ref = "libtorrent4j" }
 libtorrent4j-arm = { module = "org.libtorrent4j:libtorrent4j-android-arm", version.ref = "libtorrent4j" }
@@ -112,8 +112,8 @@ libtorrent4j-x8664 = { module = "org.libtorrent4j:libtorrent4j-android-x86_64", 
 junit = { module = "junit:junit", version = "4.13.2" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTest" }
 androidx-junit-ktx = { module = "androidx.test.ext:junit-ktx", version.ref = "androidxTest" }
-mockito-core = { module = "org.mockito:mockito-core", version = "5.14.2" }
-mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "5.4.0" }
+mockito-core = { module = "org.mockito:mockito-core", version = "5.18.0" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "6.0.0" }
 androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.7.0" }
 androidx-uiautomator = { module = "androidx.test.uiautomator:uiautomator", version = "2.3.0" }
 androidx-benchmark-macro-junit4 = { module = "androidx.benchmark:benchmark-macro-junit4", version = "1.2.0" }
@@ -126,12 +126,12 @@ kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version = "1.10.2" }
 kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "kotlinxAtomicfu" }
-kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version = "0.6.2" }
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version = "0.7.1" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 kotlinx-serialization-json-io = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json-io", version.ref = "kotlinxSerialization" }
 kotlinx-coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", version.ref = "coroutines" }
-kotlinx-io-core = { module = "org.jetbrains.kotlinx:kotlinx-io-core", version = "0.7.0" }
-kotlinx-io-okio = { module = "org.jetbrains.kotlinx:kotlinx-io-okio", version = "0.7.0" }
+kotlinx-io-core = { module = "org.jetbrains.kotlinx:kotlinx-io-core", version = "0.8.0" }
+kotlinx-io-okio = { module = "org.jetbrains.kotlinx:kotlinx-io-okio", version = "0.8.0" }
 
 [plugins]
 android-application = { id = "com.android.application", version = "8.10.1" }
@@ -145,6 +145,6 @@ android-test = { id = "com.android.test", version.ref = "agp" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinx-atomicfu = { id = "org.jetbrains.kotlinx.atomicfu", version.ref = "kotlinxAtomicfu" }
 android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
-compose-multiplatform = { id = "org.jetbrains.compose", version = "1.8.1" }
+compose-multiplatform = { id = "org.jetbrains.compose", version = "1.8.2" }
 room = { id = "androidx.room", version.ref = "room" }
-buildkonfig = { id = "com.codingfeline.buildkonfig", version = "0.17.0" }
+buildkonfig = { id = "com.codingfeline.buildkonfig", version = "0.17.1" }
