--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
 adaptive = "1.1.2"
-androidx-lifecycle = "2.9.1"
+androidx-lifecycle = "2.9.2"
 coil = "3.3.0"
 androidxTest = "1.3.0"
 filekit = "0.10.0"
 xmlutil = "0.91.2"
 koin = "4.1.0"
-ksoup = "0.2.4"
+ksoup = "0.2.5"
 coroutines = "1.10.2"
 paging = "3.3.6"
 rome = "2.1.0"
 room = "2.7.2"
-compose = "1.9.0-rc01"
+compose = "1.9.0"
 tracingPerfetto = "1.0.0"
 worker = "2.10.3"
 kotlin = "2.2.0"
@@ -27,14 +27,14 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.1
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version = "1.10.1" }
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.1.1" }
 androidx-graphics-shapes = { module = "androidx.graphics:graphics-shapes", version = "1.1.0-beta01" }
-androidx-media = { module = "androidx.media:media", version = "1.7.0" }
+androidx-media = { module = "androidx.media:media", version = "1.7.1" }
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version = "2.9.0-beta04" }
+jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version = "2.9.0-beta05" }
 jetbrains-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 jetbrains-lifecycle-runtime-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
-androidx-compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-tracing", version = "1.8.3" }
+androidx-compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-tracing", version = "1.9.0" }
 compose-material-icons = { module = "org.jetbrains.compose.material:material-icons-extended", version = "1.7.3" }
 jetbrains-compose-window-size = { module = "org.jetbrains.compose.material3:material3-window-size-class", version = "1.8.2" }
 jetbrains-compose-adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "adaptive" }
@@ -67,7 +67,7 @@ ksoup = { module = "com.fleeksoft.ksoup:ksoup", version.ref = "ksoup" }
 material-kolor = { module = "com.materialkolor:material-kolor", version = "3.0.1" }
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version = "0.37.3" }
 
-compose-material3 = { module = "androidx.compose.material3:material3", version = "1.5.0-alpha01" }
+compose-material3 = { module = "androidx.compose.material3:material3", version = "1.5.0-alpha02" }
 retrofit2 = { module = "com.squareup.retrofit2:retrofit", version = "3.0.0" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
