--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
 adaptive = "1.1.2"
-androidx-lifecycle = "2.9.2"
+androidx-lifecycle = "2.9.3"
 coil = "3.3.0"
 androidxTest = "1.3.0"
 filekit = "0.10.0"
 xmlutil = "0.91.2"
-koin = "4.1.0"
+koin = "4.1.1"
 ksoup = "0.2.5"
 coroutines = "1.10.2"
 paging = "3.3.6"
@@ -22,7 +22,7 @@ ktor = "3.2.3"
 agp = "8.10.1"
 
 [libraries]
-androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.16.0" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.17.0" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.1" }
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version = "1.10.1" }
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.1.1" }
@@ -31,7 +31,7 @@ androidx-media = { module = "androidx.media:media", version = "1.7.1" }
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version = "2.9.0-beta05" }
+jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version = "2.9.0-rc01" }
 jetbrains-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 jetbrains-lifecycle-runtime-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 androidx-compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-tracing", version = "1.9.0" }
@@ -61,7 +61,7 @@ koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
 koin-compose-viewmodel-navigation = { module = "io.insert-koin:koin-compose-viewmodel-navigation", version.ref = "koin" }
-android-material = { module = "com.google.android.material:material", version = "1.12.0" }
+android-material = { module = "com.google.android.material:material", version = "1.13.0" }
 kotlin-codepoints-deluxe = { module = "de.cketti.unicode:kotlin-codepoints-deluxe", version = "0.11.0" }
 ksoup = { module = "com.fleeksoft.ksoup:ksoup", version.ref = "ksoup" }
 material-kolor = { module = "com.materialkolor:material-kolor", version = "3.0.1" }
@@ -96,7 +96,7 @@ skyd666-settings = { module = "io.github.skyd666:settings", version = "1.0-beta0
 skyd666-compone = { module = "io.github.skyd666:compone", version = "1.0-beta05" }
 skyd666-mvi = { module = "io.github.skyd666:mvi", version = "1.0-beta02" }
 
-compottie = { module = "io.github.alexzhirkevich:compottie", version = "2.0.0-rc05" }
+compottie = { module = "io.github.alexzhirkevich:compottie", version = "2.0.0" }
 
 rome = { module = "com.rometools:rome", version.ref = "rome" }
 rome-modules = { module = "com.rometools:rome-modules", version.ref = "rome" }
