[build] Update workflow

--- a/.github/workflows/pre_release.yml
+++ b/.github/workflows/pre_release.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         cd secret/PodAura
         cp key.jks ../..
-        cp secret.gradle.kts ../..
+        cp signing.properties ../..
 
     # Clean secret files
     - name: Clean Temp Secret Files
