--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,6 @@ ksoup = "0.2.5"
 coil = "3.3.0"
 paging = "3.4.0-alpha04"
 worker = "2.10.5"
-rome = "2.1.0"
 room = "2.8.1"
 filekit = "0.11.0"
 xmlutil = "0.91.2"
@@ -85,6 +84,7 @@ ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "kto
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+ktor-serialization-kotlinx-xml = { module = "io.ktor:ktor-serialization-kotlinx-xml", version.ref = "ktor" }
 
 filekit-core = { module = "io.github.vinceglb:filekit-core", version.ref = "filekit" }
 filekit-dialogs = { module = "io.github.vinceglb:filekit-dialogs-compose", version.ref = "filekit" }
@@ -94,11 +94,6 @@ xmlutil-serialization = { module = "io.github.pdvrieze.xmlutil:serialization", v
 xmlutil-serialization-io = { module = "io.github.pdvrieze.xmlutil:serialization-io", version.ref = "xmlutil" }
 
 ksoup = { module = "com.fleeksoft.ksoup:ksoup", version.ref = "ksoup" }
-
-rome = { module = "com.rometools:rome", version.ref = "rome" }
-rome-modules = { module = "com.rometools:rome-modules", version.ref = "rome" }
-
-rssparser = { module = "com.prof18.rssparser:rssparser", version = "6.1.0" }
 
 mpv-lib = { module = "com.github.aniyomiorg:aniyomi-mpv-lib", version = "1.17.n" }
 ffmpeg-kit = { module = "com.github.jmir1:ffmpeg-kit", version = "1.17" }
